--- a/notebooks/Building_the_dataset.ipynb
+++ b/notebooks/Building_the_dataset.ipynb
@@ -57,11 +57,11 @@
       "metadata": {
         "id": "wPt1__AR4dIB",
         "colab_type": "code",
+        "outputId": "e3df805d-929f-4dc7-c2c2-7ddb9be97c6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 425
-        },
-        "outputId": "4f2716c2-e133-4641-8c1e-984790a87c42"
+        }
       },
       "source": [
         "response = requests.get('https://dadosabertos.camara.leg.br/api/v2/deputados/')\n",
@@ -71,7 +71,7 @@
         "# Print out the first 3 deputies\n",
         "json_data['dados'][:3]"
       ],
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -106,7 +106,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 2
         }
       ]
     },
@@ -142,11 +142,11 @@
       "metadata": {
         "id": "NwncJzU-6dxA",
         "colab_type": "code",
+        "outputId": "1a43243b-8a03-45fc-f72b-aed2734cfceb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c3028f46-ae78-4511-a10d-e6bff685481a"
+        }
       },
       "source": [
         "speeches = []\n",
@@ -169,12 +169,12 @@
         "  \n",
         "sys.stdout.write(\"\\rExtraction complete! %i speeches retrieved.\" % len(speeches))"
       ],
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Extraction complete! 3919 speeches retrieved."
+            "Extraction complete! 3938 speeches retrieved."
           ],
           "name": "stdout"
         }
@@ -185,17 +185,17 @@
       "metadata": {
         "id": "W4U_9N6B_VOm",
         "colab_type": "code",
+        "outputId": "9e1e7c64-516e-4b36-f823-1505e8052406",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 377
-        },
-        "outputId": "e1a10b47-80bd-4718-d0d9-bb017114f242"
+        }
       },
       "source": [
         "# Check out the first 5 rows\n",
         "speeches[:5]"
       ],
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +226,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 5
         }
       ]
     },
@@ -256,6 +256,38 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FbMYvN5Qt8ta",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a02fad9e-f4e6-4705-88d4-607d0e3b88be"
+      },
+      "source": [
+        "size = dataset.shape[0]\n",
+        "\n",
+        "size"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3938"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "YJ2557eiLOoz",
@@ -270,16 +302,16 @@
       "metadata": {
         "id": "h1Gev5wnK0n0",
         "colab_type": "code",
+        "outputId": "efbb53ad-02a5-471e-ef52-a12ba854b883",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "fd3bb42f-2d4e-471b-9d9d-34362af1dc96"
+        }
       },
       "source": [
         "dataset.head()"
       ],
-      "execution_count": 23,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,7 +393,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 55
         }
       ]
     },
@@ -370,29 +402,29 @@
       "metadata": {
         "id": "nPM8ZKm9LUwI",
         "colab_type": "code",
+        "outputId": "c33fb78a-a5d9-4074-b673-456a77be5101",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "c50c5288-b2c4-4ce3-cc57-213d4978e079"
+        }
       },
       "source": [
         "dataset.info()"
       ],
-      "execution_count": 24,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 3919 entries, 0 to 3918\n",
+            "RangeIndex: 3938 entries, 0 to 3937\n",
             "Data columns (total 4 columns):\n",
-            "id        3919 non-null int64\n",
-            "speech    3919 non-null object\n",
-            "party     3919 non-null object\n",
-            "state     3919 non-null object\n",
+            "id        3938 non-null int64\n",
+            "speech    3938 non-null object\n",
+            "party     3938 non-null object\n",
+            "state     3938 non-null object\n",
             "dtypes: int64(1), object(3)\n",
-            "memory usage: 122.5+ KB\n"
+            "memory usage: 123.1+ KB\n"
           ],
           "name": "stdout"
         }
@@ -413,16 +445,16 @@
       "metadata": {
         "id": "DoWxc7CIMVS1",
         "colab_type": "code",
+        "outputId": "06557eca-60d7-43cd-f7b7-5fab9975b64d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        },
-        "outputId": "c12a406b-648f-4a8c-d495-4de396004f38"
+        }
       },
       "source": [
         "dataset[['party', 'state']].describe()"
       ],
-      "execution_count": 25,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -453,8 +485,8 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>count</th>\n",
-              "      <td>3919</td>\n",
-              "      <td>3919</td>\n",
+              "      <td>3938</td>\n",
+              "      <td>3938</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>unique</th>\n",
@@ -468,8 +500,8 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>freq</th>\n",
-              "      <td>652</td>\n",
-              "      <td>547</td>\n",
+              "      <td>654</td>\n",
+              "      <td>551</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -477,16 +509,16 @@
             ],
             "text/plain": [
               "       party state\n",
-              "count   3919  3919\n",
+              "count   3938  3938\n",
               "unique    26    27\n",
               "top       PT    SP\n",
-              "freq     652   547"
+              "freq     654   551"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 57
         }
       ]
     },
@@ -509,19 +541,42 @@
       "source": [
         "### Processing\n",
         "\n",
-        "By quickly observing the speeches, it's visible that they all begin in that way:\n",
+        "By quickly observing the speeches, it's visible that they some of them begin in that way:\n",
         "\n",
         "```\n",
-        "O SR. ABOU ANNI (PSL - SP. Sem revisão do orador.)\n",
+        "O SR. ABOU ANNI (PSL - SP. Sem revisão do orador.) - \n",
         "```\n",
         "or,\n",
         "\n",
         "```\n",
-        "A SRA. NATÁLIA BONAVIDES (PT - RN. Pela ordem. Sem revisão da oradora.)\n",
+        "A SRA. NATÁLIA BONAVIDES (PT - RN. Pela ordem. Sem revisão da oradora.) - \n",
         "```\n",
         "\n",
-        "In order to remove this repetitions, we may remove this introdutory text."
+        "Besides, there  are some speeches that starts with:\n",
+        "\n",
+        "```\n",
+        "DISCURSO NA ÍNTEGRA ENCAMINHADO PELO SR. DEPUTADO BILAC PINTO.\\r\\n\\r\\n\n",
+        "```\n",
+        "\n",
+        "In order to remove this repetitions, we may remove this introdutory text. We divide this process in two parts: one for each type of intro. Then, we mix the data again.\n",
+        "\n",
+        "\n",
+        "We start by managing the first pattern."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "y9N_KDOtydsm",
+        "colab": {}
+      },
+      "source": [
+        "# Create a copy\n",
+        "dataset1 = dataset.copy()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -531,6 +586,8 @@
         "colab": {}
       },
       "source": [
+        "# We split the data using the signal \" - \" and retrieve the last string\n",
+        "# obtained in that split\n",
         "dataset['speech'] = dataset.speech.str.split(\" - \", n=2, expand=True)[2]"
       ],
       "execution_count": 0,
@@ -539,18 +596,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T3GASKzTN_nU",
+        "id": "UIn-gWRSz9mT",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 54
         },
-        "outputId": "523ff883-f691-4fc2-a6df-ea67c0121622"
+        "outputId": "01dbbbe9-48df-4941-a099-42b1cb1d64b1"
+      },
+      "source": [
+        "dataset.loc[0].speech"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Sr. Presidente, douta Mesa, senhoras e senhores, trago uma saudação de paz.\\r\\nEu sou oriundo da Bahia, o quarto Estado brasileiro em população e o sexto maior Estado, geograficamente falando, do nosso querido Brasil. Eu tenho o privilégio de proferir com muita segurança que nasci no Estado onde tudo começou, onde as caravelas ancoraram, onde Cabral bradou: \"Terra à vista!\" \\r\\nDos 417 Municípios do meu querido Estado da Bahia, 410 acreditaram em mim e me agraciaram com seus votos. Quando me enviaram para Brasília, Capital da nossa Nação, fizeram-no acreditando no que eu proferi durante a campanha: eu serei radicalmente contra todos os que se levantarem contra a ética e a família tradicional. Levantar-me-ei contra quem é a favor da chamada ideologia de gênero, que, pela minha ótica, até que me provem o contrário, tem sido uma catástrofe para nossa querida Nação.\\r\\nAgradeço ao Deus dos céus por ter me agraciado ao me enviar como um dos representantes da minha querida Bahia e muito especialmente como um dos representantes do povo evangélico, até porque eu profiro a fé num único Deus.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T3GASKzTN_nU",
+        "colab_type": "code",
+        "outputId": "1b531694-00db-4466-cee3-565b0e7e8d24",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
       },
       "source": [
         "dataset.head()"
       ],
-      "execution_count": 31,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -632,9 +719,263 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 92
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eqcJqDgytdQe",
+        "colab_type": "text"
+      },
+      "source": [
+        "As expected, this approach does not work on the second pattern, giving us some empty speeches, as the one below"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y6KVXWhiCQhy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset.loc[506].speech"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bV2OE4SWyo4n",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3c217b14-9e2c-4469-e3ce-c85fe55f449f"
+      },
+      "source": [
+        "null_speeches = dataset.loc[dataset.speech.isna()]\n",
+        "\n",
+        "print( \"There are %i null speeches\" % len(null_speeches))"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "There are 169 null speeches\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F6knWgoOtqp5",
+        "colab_type": "text"
+      },
+      "source": [
+        "Thus, we remove this empty speeches and follow a second a approach on the copied dataset."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cJYsx1sqt3dF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset.dropna(inplace=True)\n",
+        "\n",
+        "# Assert that the number of rows decreased\n",
+        "assert(dataset.shape[0] < size)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DetwlM9pyQXq",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now, it's time to process the 169 speeches that were not covered by the previous approach."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kTIXcqn-zBBZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset1 = dataset1.loc[null_speeches.index]\n",
+        "\n",
+        "assert(dataset1.shape[0] == 169)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YjCR_UlyzVKW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# We split the data using the pattern \"\\r\\n\\r\\n\" and retrieve the last string\n",
+        "# obtained in that split\n",
+        "dataset1['speech'] = dataset1.speech.str.split(\"\\r\\n\\r\\n\", n=1, expand=True)[1]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xZuriAu1zvI6",
+        "colab_type": "text"
+      },
+      "source": [
+        "Just assuring that all speeches were retrieved and taking a look at the result."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A5v6qLbHzlu-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "14807a3c-750e-4ad5-c298-644b80c6b01a"
+      },
+      "source": [
+        "assert(dataset.speech.isna().sum() == 0)\n",
+        "\n",
+        "dataset1.head()"
+      ],
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>speech</th>\n",
+              "      <th>party</th>\n",
+              "      <th>state</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>192</th>\n",
+              "      <td>74057</td>\n",
+              "      <td>Sr. Presidente, Sras. e Srs. Deputados, na noi...</td>\n",
+              "      <td>PCdoB</td>\n",
+              "      <td>BA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>254</th>\n",
+              "      <td>204423</td>\n",
+              "      <td>Sr. Presidente, Sras. Deputadas e Srs. Deputad...</td>\n",
+              "      <td>PSC</td>\n",
+              "      <td>PE</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>255</th>\n",
+              "      <td>204423</td>\n",
+              "      <td>Sr. Presidente, Sras. e Srs. Deputados, é com ...</td>\n",
+              "      <td>PSC</td>\n",
+              "      <td>PE</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>292</th>\n",
+              "      <td>160553</td>\n",
+              "      <td>Sr. Presidente, Sras. e Srs. Deputados, gostar...</td>\n",
+              "      <td>PSD</td>\n",
+              "      <td>BA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>506</th>\n",
+              "      <td>141513</td>\n",
+              "      <td>Sr. Presidente, Sras. e Srs. Deputados, aprove...</td>\n",
+              "      <td>DEM</td>\n",
+              "      <td>MG</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         id                                             speech  party state\n",
+              "192   74057  Sr. Presidente, Sras. e Srs. Deputados, na noi...  PCdoB    BA\n",
+              "254  204423  Sr. Presidente, Sras. Deputadas e Srs. Deputad...    PSC    PE\n",
+              "255  204423  Sr. Presidente, Sras. e Srs. Deputados, é com ...    PSC    PE\n",
+              "292  160553  Sr. Presidente, Sras. e Srs. Deputados, gostar...    PSD    BA\n",
+              "506  141513  Sr. Presidente, Sras. e Srs. Deputados, aprove...    DEM    MG"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GJTvTzOE0VA8",
+        "colab_type": "text"
+      },
+      "source": [
+        "After this, we can merge the data together again."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fgFIiXEi0Za7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset = dataset.append(dataset1)\n",
+        "\n",
+        "# Assure that all the rows are there\n",
+        "assert(dataset.shape[0] == size)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
